@@ -2,6 +2,12 @@
 \name{NEWS}
 \title{NEWS file for the mlt package}
 
+\section{Changes in Version 1.2-1 (2020-05-13)}{
+  \itemize{
+    \item{Remove contrasts a fixed parameter contributes to.}
+  }
+}
+
 \section{Changes in Version 1.2-0 (2020-05-11)}{
   \itemize{
     \item{Add exponential distribution (for Aalen additive hazards models).}
@@ -9,6 +15,7 @@
     \item{Add log-cumulative hazards, log-odds, and odds for predictions and plots.}
   }
 }
+
 
 \section{Changes in Version 1.1-2 (2020-02-13)}{
   \itemize{
